-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0-beta1
-
None
-
-
eb7ccfd88 (master)
"Call Hierarchy" Panel cannot be opened / refreshed by Contex Menu in Editor.
I want to right click on a function / method and trigger a context menu: "Open Call Hierarchy".
I can find "Open Type Hierarchy" and "Open Include Hierarchy" which trigger opening / updated the respective hierarchy. I cannot find "Open Call Hierarchy".
For Gerrit Dashboard: QTCREATORBUG-28839 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
468214,3 | LanguageClient: add action to open call hierarchy | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |